Change references of eviction date to eviction
