# app/models/hackney/income/models/eviction.rb
@@ -1,0 +1,9 @@
+module Hackney
+  module Income
+    module Models
+      class Eviction < ApplicationRecord
+        validates_presence_of :tenancy_ref, :date
+      end
+    end
+  end
+end
